Resolves: tdf#119251 parse non-default units in user inputted values

Change-Id: I28f8338f5c318f2228b742e2e171d53820cb0cc8
Reviewed-on: https://gerrit.libreoffice.org/58985
Tested-by: Jenkins
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>